--- a/style.css
+++ b/style.css
@@ -1,4 +1,36 @@
 *{
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body{
+  background-color: aliceblue;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.recuadro {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgb(0, 0,0,0.1);
+  padding: 20px;
+  margin: 0 auto;
+  max-width: 40%;
+  text-align: center;
+  width: 100%;
+}
+
+.tiempo{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  text-align: left;
+  position: absolute;
+  top: 24px;
 }
