--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
   width: 100%;
 }
 
-.tiempo{
+#tiempo{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -37,4 +37,15 @@ body{
 
 .emoji{
   font-size: 2rem;
+}
+
+#weather-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.weather-icon {
+  width: 50px;
+  height: 50px;
 }
