--- a/style.css
+++ b/style.css
@@ -15,14 +15,12 @@ body{
 }
 
 .recuadro {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px rgb(0, 0,0,0.1);
-  padding: 20px;
+  background-color:aliceblue;
   margin: 0 auto;
-  max-width: 40%;
+  max-width: 80%;
   text-align: center;
   width: 100%;
+  position: relative;
 }
 
 #tiempo{
@@ -32,7 +30,7 @@ body{
   justify-content: flex-start;
   text-align: left;
   position: absolute;
-  top: 24px;
+  margin-top: 10%;
 }
 
 .emoji{
@@ -48,4 +46,52 @@ body{
 .weather-icon {
   width: 50px;
   height: 50px;
+}
+
+.blob-container {
+  position: relative;
+  text-align: center;
+}
+
+.blob-image {
+  width: 100%;
+  height: auto;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 2;
+}
+
+#getJokebtn {
+  background-color: #f9d234;
+  border: 2px solid transparent;
+  border-radius: 25px;
+  padding: 10px 20px;
+  font-weight: bold;
+  box-shadow: 3px 3px 0 #000;
+  padding: 10px 20px;
+  transition: transform 0.2s ease;
+}
+
+.blob-small {
+  position: relative;
+  width: 15%;
+  height: auto;
+}
+
+.left {
+  top: 50%;
+  left: 5%;
+  transform: translateY(-135%);
+}
+
+.right {
+  top: 50%;
+  right: -68%;
+  transform: translateY(-468%);
 }
